+Fix issue where cursor would still appear active in the text buffer even when
it did not have the keyboard focus.
+Fix DeadObject error that could occur after deletion of a secondary main window.
+Fix incorrect tab activation that could occur after doing a tab drag and drop
operation from an external notebook.
+Fix bug in update checker that would cause the check for an update to fail.

#-----------------------------------------------------------------------------#

VERSION 0.5.99
DATE 12/05/2010
38th Alpha Release

NEWS:

NEW: [features/enhancements]
+Improved consistency of Python auto-completion to provide results under more
conditions.
+Show call tips on mouse over when available. 
+When in DEBUG mode trace statements are dumped to a log file in the systems
temp directory and are kept for up to seven days.
+Update Launch plugin to version 1.8 (bug fixes)

LIBRARY:
+Add observer interface for mouse dwell events in buffer.
+Add observer interface for when bookmarks are added or removed.

BUG FIXES:
+Fix issue with tab activation after tabs had been reorganized via user
drag and drop.
+Fix issue where using pane navigator would result in all event handlers being
disconnected until main window received an deactivation followed by another
activation event.
+Fix bug in reporting file errors under certain use cases.
+Fix incorrect highlighting for some css2 keywords.
+Don't crash when bitmap resource for tab navigator fails to load correctly.
+Fix issue where some UpdateUI events where not getting handled in modal dialogs.
+Fix inconsistency that could lead to an un-handled exception when switching between
different saved perspectives.
+Fix crash caused by thread safety issue that could occur when updater fails 
to get version info from the network.
+Fix bug where editor area would be readonly after a failed file load that
required the user to select the proper encoding.
+Fix infinite recursion error that could occur when loading a non existent
style set.
